Correction phase height when on mobile

--- a/src/game-options.scss
+++ b/src/game-options.scss
@@ -12,6 +12,7 @@
       display: flex;
       align-items: center;
       column-gap: 5px;
+      height: 19px;
    }
 
    .wg-icon {
